@@ -788,8 +788,6 @@
         // startup app layout
         appLayout.startup();
 
-        alert('view/user/{{ logged_in_user.id }}')
-
         // load user home by default
         central_content_pane.set(
                 'href',
