@@ -182,11 +182,7 @@
 
 
         var set_statuses_tagSelect_value = function(){
-
-            alert('selected value setted from template!')
-
             statuses_tagSelect.set('value', selected_statuses);
-
         }
 
         // The Updater
